# yoku

./: .gitignore  .ignore  Cargo.toml  README.md  diesel.toml  flake.nix  rustfmt.toml
.github/workflows/: build.yaml
ios/: .gitignore
ios/yoku/: AppFont.swift  BackendService.swift  CommandInputBar.swift  ContentView.swift  DevActivityLogView.swift  ExerciseSuggestionsView.swift  GlowEffect.swift  GlowSystem.swift  HistoryStore.swift  Info.plist  InformationHeader.swift  LoadingStyle.swift  Models.swift  ObjectHelpers.swift  ReferenceStore.swift  Session.swift  SetList.swift  SettingsView.swift  SpinnerView.swift  TimerStore.swift  WorkoutPurposeSummaryView.swift  WorkoutState.swift  WorkoutStore.swift  yokuApp.swift
ios/yoku.xcodeproj/: project.pbxproj
ios/yoku.xcodeproj/project.xcworkspace/xcuserdata/alexholder.xcuserdatad/: UserInterfaceState.xcuserstate
ios/yoku.xcodeproj/xcuserdata/alexholder.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ios/yoku.xcodeproj/xcuserdata/alexholder.xcuserdatad/xcschemes/: xcschememanagement.plist
migrations/2025-11-08-212758-0000_exercise_init/: down.sql  up.sql
migrations/2025-11-08-222541-0000_exercise_tags/: down.sql  up.sql
migrations/2025-11-08-232013-0000_insert_sample_data/: down.sql  up.sql
migrations/2025-11-11-220309-0000_setup_tables/: down.sql  up.sql
yoku-cli/: Cargo.toml
yoku-cli/src/: main.rs
yoku-core/: Cargo.toml  Makefile
yoku-core/src/: lib.rs  runtime.rs
yoku-core/src/db/: graph.rs  mod.rs  models.rs  operations.rs  schema.rs
yoku-core/src/graph/: mod.rs
yoku-core/src/llm/: check.rs  mod.rs
yoku-core/src/parser/: llm.rs  mod.rs
yoku-core/src/recommendation/: engine.rs  graph.rs  mod.rs
yoku-core/src/session/: commands.rs  context.rs  mod.rs  session.rs  sets.rs  summary.rs  workout.rs
yoku-core/src/uniffi_interface/: errors.rs  logging.rs  mod.rs  modifications.rs  objects.rs  session.rs
yoku-server/: Cargo.toml
yoku-uniffi/: .gitignore  Cargo.toml
yoku-uniffi/src/: lib.rs
