[package]
name = "yoku-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
crossterm = "0.29.0"
dotenvy = "0.15.7"
ratatui = "0.29.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
yoku-core = { path = "../yoku-core" }
