[package]
name = "yoku-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
diesel = { version = "2.3.3", features = ["postgres", "chrono", "numeric", "uuid"] }
diesel-async = { version = "0.7.4", features = ["postgres", "bb8"] }
ollama-rs = "0.3.2"
openai = "1.1.1"
regex = "1.12.2"
rust_decimal = { version = "1.39", features = ["diesel"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
neo4rs = "0.7.0"
rand = "0.9.2"
