[package]
name = "yoku-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "lib"]
name = "yoku"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
diesel = { version = "2.3.3", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
# diesel-async = { version = "0.7.4", features = ["sqlite", "bb8"] }
ollama-rs = "0.3.2"
openai = "1.1.1"
regex = "1.12.2"
# rust_decimal = { version = "1.39", features = ["diesel"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
neo4rs = "0.7.0"
rand = "0.9.2"
diesel_migrations = { version = "2.3.0", features = ["sqlite"] }
uniffi = {version = "0.29", optional = true}
thiserror = { version = "2.0.17", optional = true }
dotenv_codegen = "0.15.0"
log = "0.4.28"
env_logger = "0.11.8"
num_cpus = "1.17.0"

[features]
default = ["uniffi"]
uniffi = ["dep:uniffi", "dep:thiserror"]
thiserror = ["dep:thiserror"]
