[package]
name = "yoku-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "lib"]
name = "yoku"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
ollama-rs = "0.3.2"
openai = "1.1.1"
regex = "1.12.2"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
neo4rs = "0.7.0"
rand = "0.9.2"
uniffi = {version = "0.29", optional = true}
thiserror = { version = "2.0.17", optional = true }
dotenv_codegen = "0.15.0"
log = "0.4.28"
env_logger = "0.11.8"
num_cpus = "1.17.0"
indradb-lib = { version = "5.0.0", features = ["rocksdb-datastore"] }

[features]
default = ["uniffi"]
uniffi = ["dep:uniffi", "dep:thiserror"]
thiserror = ["dep:thiserror"]

